Try to fix overflow shopping cart issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -170,6 +170,7 @@
   min-height: 100vh;
   max-height: 100vh;
   max-width: 100vw;
+  overflow-y: hidden;
   /* max-width: 100%;
   max-height: 80%;
   width: 100%; */
